fixed spacing in mobile navbar

--- a/css/gridMain.css
+++ b/css/gridMain.css
@@ -195,50 +195,32 @@ footer address a:hover {
     nav .logo {
         order: -1;
         grid-row: 1;
-        /* grid-column: 1/8; */
         grid-column: 1/7;
-        /* text-align: center; */
         padding-bottom: 3.0rem;
-        /* align-self: start; */
     }
-    /* nav div a {
-        text-align: center;
-    } */
     .services {
         grid-row: 2;
         grid-column: 1;
-        /* grid-column: 1/3; */
-        /* text-align: center; */
     }
     .product {
         grid-row: 2;
         grid-column: 2;
-        /* grid-column: 2/4; */
-        /* text-align: center; */
     }
     .vision {
         grid-row: 2;
         grid-column: 3;
-        /* grid-column: 3/5; */
-        /* text-align: center; */
     }
     .features {
         grid-row: 2;
         grid-column: 4;
-        /* grid-column: 4/6; */
-        /* text-align: center; */
     }
     .about {
         grid-row: 2;
         grid-column: 5;
-        /* grid-column: 5/7; */
-        /* text-align: center; */
     }
     .contact {
         grid-row: 2;
         grid-column: 6;
-        /* grid-column: 6/8; */
-        /* text-align: center; */
     }
 }
 
@@ -264,7 +246,7 @@ footer address a:hover {
     nav {
         padding-top: 1.5rem;
         display: grid;
-        align-items: baseline;
+        /* align-items: baseline; */
         font-size: 1.6rem;
         text-align: center;
         grid-gap: 0;
@@ -275,7 +257,7 @@ footer address a:hover {
     nav div hr {
         display: block;
         position: relative;
-        margin: 8px 0px 18px 0px;
+        margin: 8px 0px;
         padding: 4px 0px;
         height: 0;
         width: 100%;
@@ -290,14 +272,18 @@ footer address a:hover {
     .services {
         grid-row: 2;
         grid-column: 1/8;
-        padding-top: 0;
-        margin-top: 0;
+        /* padding-top: -1.0rem;
+        margin-top: -1.0rem;
+        padding-bottom: -1.0rem;
+        margin-bottom: -1.0rem; */
     }
     .product {
         grid-row: 3;
         grid-column: 1/8;
-        padding-top: 0;
-        margin-top: 0;
+        /* padding-top: -1.0rem;
+        margin-top: -1.0rem;
+        padding-bottom: -1.0rem;
+        margin-bottom: -1.0rem; */
     }
     .vision {
         grid-row: 4;
